# samplingsimulatorpy

./: .flake8  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
docs/source/: modules.rst  samplingsimulatorpy.rst
samplingsimulatorpy/: draw_samples.py  generate_virtual_pop.py  plot_sample_hist.py  plot_sampling_hist.py  samplingsimulatorpy.py  stat_summary.py  test_plot_sampling_hist.py
tests/: test_draw_samples.py  test_generate_virtual_pop.py  test_plot_sample_hist.py  test_plot_sampling_hist.py  test_samplingsimulatorpy.py  test_stat_summary.py
