[tool.poetry]
name = "samplingsimulatorpy"
version = "0.1.0"
description = "This is a sampling simulator"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
numpy = "^1.18.1"
altair = "^4.0.1"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
