[tool.poetry]
name = "samplingsimulatorpy"
version = "0.1.0"
description = "This is a sampling simulator"
authors = ["Your Name <you@example.com>"]
license = "MIT"
packages = [
    { include = "samplingsimulatorpy"},
]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.1"
numpy = "^1.18.1"
altair = "^4.0.1"
flake8 = "^3.7.9"

[tool.poetry.dev-dependencies]
sphinx = "^2.4.4"
sphinxcontrib-napoleon = "^0.7"
flake8 = "^3.7.9"
pytest-cov = "^2.8.1"
pytest = "^5.3.5"
codecov = "^2.0.16"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
